--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Navbar starts here -->
-
+    <nav></nav>
     <!-- Navbar ends here -->
 
     <!-- Listen Again starts here -->
